# introboids-zubidi

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
cpp/: Boid.h  CMakeLists.txt  UseImGui.cpp  main.cpp  main_example.cpp
julia/: boids.jl
